--- a/app/src/main/res/layout/user_row.xml
+++ b/app/src/main/res/layout/user_row.xml
@@ -11,25 +11,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <View
-            android:id="@+id/ivColor"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:background="@color/black"/>
 
         <TextView
             android:id="@+id/tvUserName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:text="Messi"
+            android:text=""
             android:textAlignment="center"
             android:padding="10dp"
             android:layout_marginStart="10dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf ="@id/ivColor"/>
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
             android:id="@+id/tvFavoriteCity"
@@ -39,9 +31,19 @@
             android:textSize="20sp"
             android:padding="10dp"
             android:layout_marginStart="10dp"
-            android:text="Delantero"
-            app:layout_constraintTop_toBottomOf="@id/tvUserName"
-            app:layout_constraintStart_toEndOf ="@id/ivColor"
+            android:text=""
+            app:layout_constraintTop_toBottomOf="@id/tvUserName"/>
+
+        <TextView
+            android:id="@+id/tvFavoriteColor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:padding="10dp"
+            android:layout_marginStart="10dp"
+            android:text=""
+            app:layout_constraintTop_toBottomOf="@id/tvFavoriteCity"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
